# cloud-tools

./: Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: publish.yml
cloud/: factory.py  protocols.py
cloud/amazon/: s3.py
cloud/google/: pubsub.py  storage.py
tests/: test_factory.py
tests/amazon/: test_s3.py  test_sns.py  test_sqs.py
tests/google/: test_pubsub.py  test_storage.py
